// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ControlTopBar > matches its snapshot with a crumb 1`] = `
"<header data-v-2e629669="" class="top-bar"><a data-v-2e629669="" href="/" class="brand"><svg data-v-2e629669="" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true">
      <rect x="0" y="9" width="7" height="7" rx="1.5" fill="#B4F03C"></rect>
      <rect x="9" y="11" width="5" height="5" rx="1.2" fill="#22D3EE"></rect>
      <rect x="4" y="2" width="5" height="5" rx="1.2" fill="#FF3EA5"></rect>
      <rect x="12" y="4" width="4" height="4" rx="1" fill="#FFB020"></rect>
    </svg><span data-v-2e629669="" class="brand-name">NEONPIXELS</span>
    <!--v-if-->
  </a><span data-v-2e629669="" class="crumb-sep" aria-hidden="true">/</span><a data-v-2e629669="" href="/" class="crumb-link">All properties</a><span data-v-2e629669="" class="crumb-sep" aria-hidden="true">/</span><span data-v-2e629669="" class="crumb-current">basin.fm</span><span data-v-2e629669="" class="grow"></span><button data-v-2e629669="" type="button" class="range-btn"> LAST 30 DAYS <svg data-v-2e629669="" width="9" height="6" viewBox="0 0 9 6" fill="none" aria-hidden="true">
      <path data-v-2e629669="" d="M1 1.5L4.5 5L8 1.5" stroke="#9A9AA8" stroke-width="1.5" stroke-linecap="round"></path>
    </svg></button>
  <div data-v-2e629669="" class="user-button-stub"></div>
</header>"
`;

exports[`ControlTopBar > matches its snapshot without a crumb 1`] = `
"<header data-v-2e629669="" class="top-bar"><a data-v-2e629669="" href="/" class="brand"><svg data-v-2e629669="" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true">
      <rect x="0" y="9" width="7" height="7" rx="1.5" fill="#B4F03C"></rect>
      <rect x="9" y="11" width="5" height="5" rx="1.2" fill="#22D3EE"></rect>
      <rect x="4" y="2" width="5" height="5" rx="1.2" fill="#FF3EA5"></rect>
      <rect x="12" y="4" width="4" height="4" rx="1" fill="#FFB020"></rect>
    </svg><span data-v-2e629669="" class="brand-name">NEONPIXELS</span><span data-v-2e629669="" class="brand-sub">CONTROL</span></a>
  <nav data-v-2e629669="" class="top-nav">
    <ul data-v-2e629669="" class="nav-list">
      <li data-v-2e629669=""><a data-v-2e629669="" href="/" class="nav-link active">Overview</a></li>
      <li data-v-2e629669=""><a data-v-2e629669="" href="#properties" class="nav-link">Properties</a></li>
      <li data-v-2e629669=""><a data-v-2e629669="" href="#alerts" class="nav-link">Alerts</a></li>
      <li data-v-2e629669=""><a data-v-2e629669="" href="#integrations" class="nav-link">Integrations</a></li>
    </ul>
  </nav><button data-v-2e629669="" type="button" class="range-btn"> LAST 30 DAYS <svg data-v-2e629669="" width="9" height="6" viewBox="0 0 9 6" fill="none" aria-hidden="true">
      <path data-v-2e629669="" d="M1 1.5L4.5 5L8 1.5" stroke="#9A9AA8" stroke-width="1.5" stroke-linecap="round"></path>
    </svg></button>
  <div data-v-2e629669="" class="user-button-stub"></div>
</header>"
`;
